--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "bolt/project",
+    "name": "yoshikan/yoshikan-web-app",
     "type": "project",
-    "description": "Bolt 5 standard project skeleton",
+    "description": "Yoshi Kan, judoschool voor jong en oud.",
     "license": "MIT",
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "bobdenotter/configuration-notices": "^1.3",
         "bobdenotter/weatherwidget": "^1.1",
         "bolt/article": "^2.0",
@@ -28,6 +28,7 @@
         "phpstan/phpstan": "^0.12.48",
         "phpstan/phpstan-doctrine": "^0.12.20",
         "phpstan/phpstan-symfony": "^0.12.8",
+        "qossmic/deptrac-shim": "^1.0",
         "symplify/easy-coding-standard": "^9.4"
     },
     "config": {
@@ -52,6 +53,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "src/",
+            "App\\YoshiKan\\": "application/YoshiKan/",
             "Bolt\\ComposerScripts\\": "vendor/bolt/core/bin/composer-script/"
         }
     },
