--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,9 @@
         "phpstan/phpstan": "^0.12.48",
         "phpstan/phpstan-doctrine": "^0.12.20",
         "phpstan/phpstan-symfony": "^0.12.8",
+        "phpunit/phpunit": "^9.5",
         "qossmic/deptrac-shim": "^1.0",
+        "symfony/phpunit-bridge": "^6.2",
         "symplify/easy-coding-standard": "^9.4"
     },
     "config": {
