--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "require": {
         "php": "^8.1",
         "bobdenotter/configuration-notices": "^1.3",
+        "bobdenotter/sitemap": "^1.3",
         "bobdenotter/weatherwidget": "^1.1",
         "bolt/article": "^2.0",
         "bolt/assets": "^5.1",
