--- a/config/services_bolt.yaml
+++ b/config/services_bolt.yaml
@@ -10,6 +10,9 @@ services:
     BobdenOtter\WeatherWidget\:
         resource: '../vendor/bobdenotter/weatherwidget/src/*'
         exclude: '../vendor/bobdenotter/weatherwidget/src/{Entity,Exception}'
+    Bobdenotter\Sitemap\:
+        resource: '../vendor/bobdenotter/sitemap/src/*'
+        exclude: '../vendor/bobdenotter/sitemap/src/{Entity,Exception}'
     Bolt\Article\:
         resource: '../vendor/bolt/article/src/*'
         exclude: '../vendor/bolt/article/src/{Entity,Exception}'
