--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "devDependencies": {
-    "@symfony/webpack-encore": "^4.0.0",
     "@babel/core": "^7.17.0",
     "@babel/preset-env": "^7.16.0",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
+    "@symfony/webpack-encore": "^4.0.0",
     "core-js": "^3.0.0",
-    "postcss-loader": "^7.0.1",
     "postcss": "^8.0.9",
+    "postcss-loader": "^7.0.1",
     "regenerator-runtime": "^0.13.2",
     "tailwindcss": "^3.0.23",
     "vue": "^3.0",
     "vue-loader": "^17.0.0",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
     "webpack-notifier": "^1.6.0"
   },
   "license": "MIT",
@@ -21,5 +21,8 @@
     "dev": "encore dev",
     "watch": "encore dev --watch",
     "build": "encore production --progress"
+  },
+  "dependencies": {
+    "jquery": "^3.6.2"
   }
 }
