--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,8 @@ docker-compose.override.yaml
 ###> qossmic/deptrac-shim ###
 /.deptrac.cache
 ###< qossmic/deptrac-shim ###
+
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
