Templating & frontend building.

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "bolt/redactor": "^2.0",
         "bolt/themes": "^3.5",
         "damienharper/auditor-bundle": "^5.2",
+        "jeschek/dragsort": "^1.0",
         "nelmio/security-bundle": "^2.12",
         "stof/doctrine-extensions-bundle": "^1.7",
         "symfony/flex": "^2.0",
