--- a/config/bolt/menu.yaml
+++ b/config/bolt/menu.yaml
@@ -84,7 +84,7 @@ footer_c3:
     -   label: Online inschrijven
         link: inschrijven
     -   label: Nieuws
-        link: pagina/105
+        link: nieuws
     -   label: Links
         link: pagina/128
     -   label: Sponsors
