--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,13 +1,9 @@
-# This file is the entry point to configure your own services.
-# Files in the packages/ subdirectory configure your dependencies.
 
-# Put parameters here that don't need to change on each machine where the app is deployed
-# https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'nl'
     # This parameter defines the codes of the locales (languages) enabled in the application
     app_locales: en|nl|es|fr|de|pl|it|hu|pt_BR|ja|nb|nn|nl_NL|nl_BE|is|ru|cs|bg
-    app.notifications.email_sender: anonymous@example.com
+    app.notifications.email_sender: no-reply@yoshikan.be
     # Default table prefix for Bolt database
     bolt.table_prefix: yoshikan_
     # Alternatively may define different table prefixes by entity managers configured in doctrine.yml
@@ -188,3 +184,21 @@ services:
     Bolt\Api\ContentDataPersister:
         decorates: 'api_platform.doctrine.orm.data_persister'
 
+    # --------------------------------------------------------------------------
+    # Yoshi Kan Member Module
+    # --------------------------------------------------------------------------
+    # infrastructure
+    # --------------------------------------------------------------------------
+
+    App\YoshiKan\Infrastructure\:
+        resource: '../application/YoshiKan/Infrastructure/*'
+        exclude:
+            - '../application/YoshiKan/Infrastructure/Translations/'
+
+    # --------------------------------------------------------------------------
+    # controllers
+    # --------------------------------------------------------------------------
+
+    App\YoshiKan\Infrastructure\Web\Controller\:
+        resource: '../application/YoshiKan/Infrastructure/Web/Controller'
+        tags: [ 'controller.service_arguments' ]
