--- a/config/bolt/menu.yaml
+++ b/config/bolt/menu.yaml
@@ -5,7 +5,7 @@
 
 top:
     -   label: Judo School
-        class: fa fa-medal
+        class: mdi mdi-medal
         submenu:
             -   label: Onze Missie
                 link: pagina/125
@@ -20,7 +20,7 @@ top:
                     -   label: Heist op den Berg
                         link: locatie/124
     -   label: Praktische info
-        class: fa fa-circle-info
+        class: mdi mdi-information
         submenu:
             -   label: Lessenschema
                 link: pagina/130
@@ -30,22 +30,22 @@ top:
                 link: pagina/132
             -   label: Reglement
                 link: pagina/133
-            -   label: Online inschrijven
+            -   label: Inschrijven
                 link: inschrijven
             -   label: GDPR - Privacy Verklaring
                 link: pagina/134
 
     -   label: Over ons
-        class: fa fa-users
+        class: mdi mdi-account-multiple
         link: trainers
     -   label: Nieuws
-        class: fa fa-bullhorn
+        class: mdi mdi-bullhorn 
         link: nieuws
     -   label: Links
-        class: fa fa-link
+        class: mdi mdi-link
         link: pagina/128
     -   label: Contact
-        class: fa fa-envelope
+        class: mdi mdi-email
         link: pagina/127
 
 # -- footer colums ------------------------------------------------------------------------------------------
@@ -81,7 +81,7 @@ footer_c2:
                 link: pagina/134
 
 footer_c3:
-    -   label: Online inschrijven
+    -   label: Inschrijven
         link: inschrijven
     -   label: Nieuws
         link: nieuws
