--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "build": "encore production --progress"
   },
   "dependencies": {
+    "@oruga-ui/oruga-next": "^0.5.9",
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
+    "axios": "^1.2.1",
     "jquery": "^3.6.2"
   }
 }
