--- a/composer.json
+++ b/composer.json
@@ -87,6 +87,9 @@
         ],
         "lint": "@php vendor/bin/ecs check --no-progress-bar --no-interaction",
         "lint:fix": "@php vendor/bin/ecs check --no-progress-bar --no-interaction --fix",
-        "phpstan": "@php vendor/bin/phpstan --memory-limit=1G analyse -c phpstan.neon src"
+        "phpstan": "@php vendor/bin/phpstan --memory-limit=1G analyse -c phpstan.neon src",
+        "php-cs-fix-app": ".qaTools/vendor/bin/php-cs-fixer fix application",
+        "php-deptrac": "php vendor/bin/deptrac",
+        "php-stan-app": "@php vendor/bin/phpstan --memory-limit=1G analyse -c phpstan.neon application"
     }
 }
