--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "paragonie/random_compat": "*"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.13",
         "phpstan/phpstan": "^1.9.0",
         "phpstan/phpstan-doctrine": "^1.3.0",
         "phpstan/phpstan-symfony": "^1.2.0",
@@ -88,7 +89,7 @@
         "lint": "@php vendor/bin/ecs check --no-progress-bar --no-interaction",
         "lint:fix": "@php vendor/bin/ecs check --no-progress-bar --no-interaction --fix",
         "phpstan": "@php vendor/bin/phpstan --memory-limit=1G analyse -c phpstan.neon src",
-        "php-cs-fix-app": ".qaTools/vendor/bin/php-cs-fixer fix application",
+        "php-cs-fix-app": "vendor/bin/php-cs-fixer fix application",
         "php-deptrac": "php vendor/bin/deptrac",
         "php-stan-app": "@php vendor/bin/phpstan --memory-limit=1G analyse -c phpstan.neon application"
     }
