--- a/composer.json
+++ b/composer.json
@@ -89,8 +89,9 @@
         "lint": "@php vendor/bin/ecs check --no-progress-bar --no-interaction",
         "lint:fix": "@php vendor/bin/ecs check --no-progress-bar --no-interaction --fix",
         "phpstan": "@php vendor/bin/phpstan --memory-limit=1G analyse -c phpstan.neon src",
-        "php-cs-fix-app": "vendor/bin/php-cs-fixer fix application",
-        "php-deptrac": "php vendor/bin/deptrac",
-        "php-stan-app": "@php vendor/bin/phpstan --memory-limit=1G analyse -c phpstan.neon application"
+        "cs-fix-app": "vendor/bin/php-cs-fixer fix application",
+        "cs-fix-test": "vendor/bin/php-cs-fixer fix tests",
+        "deptrac": "php vendor/bin/deptrac",
+        "phpstan-app": "@php vendor/bin/phpstan --memory-limit=1G analyse -c phpstan.neon application"
     }
 }
