--- a/frontends/member_module/tsconfig.json
+++ b/frontends/member_module/tsconfig.json
@@ -7,6 +7,7 @@
       "@/*": ["./src/*"]
     },
     "allowJs": true,
+// "noImplicitAny": false,
 //    "target": "es2020",
 //    "sourceMap": true,
 //    "module": "esnext",
