--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "beberlei/doctrineextensions": "^1.3",
         "bobdenotter/configuration-notices": "^1.3",
         "bobdenotter/sitemap": "^1.3",
         "bobdenotter/weatherwidget": "^1.1",
