--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # Comment out the following line, if you wish to store your SQLite database in Git
 /var/data/*
+/uploads/*
 
 ###> bolt/core ###
 config/bolt/*_local.yaml
